[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/scene/wall.png" type="Texture" id=1]
[ext_resource path="res://mesh/student.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/dialog_box/box_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/dialog_box/dialog_box.png" type="Texture" id=4]
[ext_resource path="res://scripts/room.gd" type="Script" id=5]
[ext_resource path="res://texts/dialogueFont.tres" type="DynamicFont" id=6]

[node name="room" type="Node2D"]
z_as_relative = false
script = ExtResource( 5 )

[node name="wall" type="Sprite" parent="."]
position = Vector2( -753.74, -126.698 )
scale = Vector2( 1.45872, 0.942556 )
texture = ExtResource( 1 )
offset = Vector2( 561.526, 139.478 )

[node name="student" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -20, 8 )
scale = Vector2( 5, 5 )

[node name="Next" type="Button" parent="."]
visible = false
margin_left = 121.705
margin_top = -0.147152
margin_right = 221.705
margin_bottom = 32.8528
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_next" type="Label" parent="Next"]
margin_left = 6.0
margin_top = 10.0
margin_right = 111.0
margin_bottom = 24.0
rect_scale = Vector2( 0.800001, 1 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Next please"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave" type="Button" parent="."]
visible = false
margin_left = 122.0
margin_top = 32.8528
margin_right = 222.0
margin_bottom = 65.9998
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
clip_text = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_leave" type="Label" parent="Leave"]
margin_left = 6.0
margin_top = 10.0
margin_right = 106.0
margin_bottom = 24.0
rect_scale = Vector2( 0.84, 1 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You can go"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog_box" type="Sprite" parent="."]
visible = false
position = Vector2( 72.2751, -36.4237 )
scale = Vector2( 1.25, 1.75 )
texture = ExtResource( 4 )

[node name="lbl_dialog" type="Label" parent="dialog_box"]
margin_left = -46.0
margin_top = -9.0
margin_right = 131.0
margin_bottom = 5.0
rect_scale = Vector2( 0.540001, 1 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_Leave_pressed"]
